load costs in the library inversion solver